Check layout fixes on mobile

--- a/css/basics/layout.css
+++ b/css/basics/layout.css
@@ -19,3 +19,22 @@ body {
 .main-header {
     grid-column: 1 / -1;
 }
+
+
+
+
+
+
+
+
+/* MOBILE */
+/*=======================================*/
+
+@media (max-width: 768px) {
+    .main-layout {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto 1fr;
+        height: 100vh;
+        overflow: hidden;
+    }
+}
