--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -18,7 +18,7 @@
 
 }
 
-.gallery-section img {
+.gallery-grid img {
     width: 100%;
 }
 
@@ -28,12 +28,16 @@
 
 @media (max-width: 1200px) {
     .gallery-grid {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
 @media (max-width: 768px) {
+    .gallery-section {
+        max-height: 30vh;
+    }
+
     .gallery-grid {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(6, 1fr);
     }
 }
